--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
+git remote add origin https://github.com/sudharshan24k/Project3_updated.gitgit commit -m "Modernized Angular + FastAPI monorepo: all actions per submission, DB-only storage, updated .gitignore and README"git commit -m "Modernized Angular + FastAPI monorepo: all actions per submission, DB-only storage, updated .gitignore and README"# See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
 # Compiled output
 /dist
@@ -40,3 +40,37 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.so
+*.egg-info/
+.env
+.venv
+venv/
+ENV/
+.Python
+
+# FastAPI
+backend/.mypy_cache/
+backend/.pytest_cache/
+backend/.env
+backend/.venv
+backend/venv/
+backend/__pycache__/
+
+# Logs
+*.log
+
+# Local responses (if ever re-enabled)
+backend/responses/
+
+# Misc
+*.swp
+*.swo
+
+# Ignore environment files
+.env.*
