--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_DETAILS=mongodb+srv://sai3:pCoec8U4cOGUZppB@cluster0.gpxgs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_DETAILS=####replace with your mongo db uri######
