Make team name and audit pipeline editable on schema update; backend and frontend fixes for list view fields

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_DETAILS=###replace this comment with the DB link###
+MONGO_DETAILS=mongodb+srv://sai3:pCoec8U4cOGUZppB@cluster0.gpxgs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
